<resources>
    <string name="app_name">GuessingGame</string>
    <string name="directions">Choose a number between 1 and 100. \nYou have 5 chances to guess the number I have chosen for you. \nGood luck!</string>
    <string name="start">Start Game</string>
    <string name="check_guess">check guess</string>
    <string name="guess_a_number">guess a number</string>
    <string name="higher">higher</string>
    <string name="_1_100">1 - 100</string>
    <string name="you_won">YOU WON!</string>
    <string name="winning_number">the winning number was %1$d</string>
    <string name="play_again">play again</string>
    <string name="lower">lower</string>
    <string name="enter_number">enter a number</string>
    <string name="enter_number_1_to_100">enter a number between \n1 and 100</string>
    <string name="chances_left">%1$d chances left</string>
    <string name="you_lost">YOU LOST!</string>
</resources>
